--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,10 +2,16 @@
 <body>
   
 <main class="wrap">
-  <a href="http://www.tomtosseyn.be" class="enter"><span class="glitch" data-text="ENTER">ENTER</span></a>
+  <div class="centered">
+
+    <a href="http://www.tomtosseyn.be" class="enter"><span class="glitch" data-text="ENTER">ENTER</span></a>
+    <div class="nav">
+      <a href="">Fashion</a>
+      <a href="">Logos</a>
+      <a href="">Print</a>
+      <a href="">Clients</a>
+    </div>
+  </div>
 </main>
-
-
 {{ partial "footer" .}}
-
 </body>
