--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,14 +31,14 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
-  {#<meta name="msapplication-TileImage" content="/images/touch/ms-touch-icon-144x144-precomposed.png">#}
-  {#<meta name="msapplication-TileColor" content="{{ .Site.Params.themeColor }}">#}
+  <meta name="msapplication-TileImage" content="/images/touch/ms-touch-icon-144x144-precomposed.png">
+  <meta name="msapplication-TileColor" content="{{ .Site.Params.themeColor }}">
 
   <!-- Color the status bar on mobile devices -->
-  {#<meta name="theme-color" content="{{ .Site.Params.themeColor }}">#}
+  <meta name="theme-color" content="{{ .Site.Params.themeColor }}">
 
   <!-- Your styles -->
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css">
 
   <script type="text/javascript">
     var ie = (function () {
