--- a/static/styles/_fonts.scss
+++ b/static/styles/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Choque Display';
-  src: url('/fonts/choque-display-ssi-bold-italic-webfont.woff2') format('woff2'), 
-  url('/fonts/choque-display-ssi-bold-italic-webfont.woff') format('woff');
+  src: url('../fonts/choque-display-ssi-bold-italic-webfont.woff2') format('woff2'), 
+  url('../fonts/choque-display-ssi-bold-italic-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
