--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -37,8 +37,9 @@
   <!-- Color the status bar on mobile devices -->
   <meta name="theme-color" content="{{ .Site.Params.themeColor }}">
 
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <!-- Your styles -->
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="/styles/main.css">
 
   <script type="text/javascript">
     var ie = (function () {
