--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,9 @@
     <div class="social">
       <a href="http://instagram.com/tomtosseyn" target="_blank"><img src="/images/instagram.svg" alt="instagram"></a>
     </div>
+    <div class="text-center">
+      <a href="mailto:info@tomtosseyn.be">Mail me</a>
+    </div>
   </div>
   
   {{ partial "footer" .}}
