--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,4 +3,5 @@
 <script type="text/javascript" src="/scripts/jquery.min.js"></script>
 <script type="text/javascript" src="/scripts/tingle.min.js"></script>
 <script type="text/javascript" src="/scripts/main.js"></script>
+<script type="text/javascript" src="/scripts/preload.js"></script>
 <!-- endbuild -->
