--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -4,12 +4,11 @@
       <source src="/images/cut.mp4" type="video/mp4"/>
     </video>
   </div>
+  <div class="caption">sdf</div>
 </div>
 
-<main class="wrap">
-  <div class="animate-glitch js-info-open">
-    <img class="btn--info" src="/images/info.svg" alt="Info"/>
-    <img class="btn--info" src="/images/info-highlight.svg" alt="Info"/>
-    <img class="btn--info" src="/images/info.svg" alt="Info"/>
-  </div>
-</main>
+<div class="animate-glitch js-info-open">
+  <img class="btn--info" src="/images/info.svg" alt="Info"/>
+  <img class="btn--info" src="/images/info-highlight.svg" alt="Info"/>
+  <img class="btn--info" src="/images/info.svg" alt="Info"/>
+</div>
