--- a/static/styles/_globals.scss
+++ b/static/styles/_globals.scss
@@ -1,2 +1,3 @@
 
-$font-family-intro: 'Choque Display', 'Arial Black', sans-serif;
+$font-family-heading: 'Choque Display', 'Arial Black', sans-serif;
+$font-family-body: monaco, serif;
