--- a/static/styles/_intro.scss
+++ b/static/styles/_intro.scss
@@ -1,24 +1,32 @@
-html,
-body {
-  font-family: $font-family-intro;  
-  color: white;
-  height: 100vh; 
-}
 
 .intro {
   position: absolute;
-  z-index: -1;
   height: 100vh;
   width: 100vw;  
   overflow: hidden;
   background-size: 100vw auto;
   transition: background 0.3s ease;
-
   cursor: pointer;
+
+  .caption {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    padding: 3px 10px 5px 20px;
+    mix-blend-mode: difference;
+  }
+
   .myar {
     display: none;
   }
+}
 
+.no-backgroundblendmode {
+  .intro .caption {
+    background-color: black;
+    background-color: rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 7px 7px rgba(0,0,0,0.5);
+  }
 }
 
 .info-text {
