--- a/static/styles/_modal.scss
+++ b/static/styles/_modal.scss
@@ -28,10 +28,7 @@
   // background: rgba(0, 0, 0, .5);
   opacity: 0;
   cursor: pointer;
-  -webkit-transition: -webkit-transform .2s ease;
-  // transition: -webkit-transform .2s ease;
   transition: transform .2s ease, opacity 0.2s ease;
-  // transition: transform .2s ease, -webkit-transform .2s ease;
 }
 
 /* confirm and alerts
@@ -88,27 +85,23 @@
   margin-bottom: auto;
   width: 60%;
   
-  // border-radius: 4px;
-  // background: #fff;
   opacity: 1;
   cursor: auto;
-  // -webkit-transition: -webkit-transform .3s cubic-bezier(.175, .885, .32, 1.275);
-  // transition: -webkit-transform .3s cubic-bezier(.175, .885, .32, 1.275);
-  // transition: transform .3s cubic-bezier(.175, .885, .32, 1.275);
-  // transition: transform .3s cubic-bezier(.175, .885, .32, 1.275), -webkit-transform .3s cubic-bezier(.175, .885, .32, 1.275);
-  // -webkit-transform: scale(.8);
-  // -ms-transform: scale(.8);
-  // transform: scale(.8);
   
   h1 {
+    font-family: $font-family-heading;
     text-transform: uppercase;
     text-align: center;
   }
 
+  a,
+  a:hover,
+  a:focus,
   p {
+    color: #fff;
     font-size: 12px;
     line-height: 1.5em;
-    font-family: monaco, serif;
+    font-family: $font-family-body;
   }
 }
 
