remove close button, make logo smaller

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,10 +1,10 @@
 <div class="intro">
-  <div class="myar">
+  <div class="myar video">
     <video autoplay loop muted>
       <source src="/images/cut.mp4" type="video/mp4"/>
     </video>
   </div>
-  <div class="caption">sdf</div>
+  <div class="js-intro-hidden caption"></div>
 </div>
 
 <div class="animate-glitch js-info-open">
