--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,10 +9,8 @@
   <div class="info-text" id="info-text">
     {{ $.Site.Data.info.info | markdownify }}
     <div class="social">
-      <a href="http://instagram.com/tomtosseyn" target="_blank"><img src="/images/instagram.svg" alt="instagram"></a>
-    </div>
-    <div class="text-center">
-      <a href="mailto:info@tomtosseyn.be">Mail me</a>
+      <a style="float:left;" href="mailto:info@tomtosseyn.be">info@tomtosseyn.be</a>
+      <a style="float:right;" href="http://instagram.com/tomtosseyn" target="_blank"><img src="/images/instagram.svg" alt="instagram"/></a> 
     </div>
   </div>
   
