--- a/static/styles/_app.scss
+++ b/static/styles/_app.scss
@@ -5,6 +5,10 @@ body {
   height: 100vh; 
 }
 
+button, input, optgroup, select, textarea {
+  font-family: $font-family-body;    
+}
+
 html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
