--- a/static/styles/_info.scss
+++ b/static/styles/_info.scss
@@ -1,3 +1,10 @@
 .social {
+  height: 24px;
   text-align: center;
+  vertical-align: middle;
+  > a {
+    line-height: 24px !important;
+    vertical-align: middle;
+    display: inline-block;
+  }
 }
