temp tool for customizing background developer

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,9 @@
 {{ partial "head.html" .}}
 
 <body>
+  {{ partial "debug.html" .}}
+  
   {{ partial "intro.html" .}}
-
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
 
   <div class="info-text" id="info-text">
     {{ $.Site.Data.info.info | markdownify }}
@@ -13,6 +12,7 @@
       <a style="float:right;" href="http://instagram.com/tomtosseyn" target="_blank"><img src="/images/instagram.svg" alt="instagram"/></a> 
     </div>
   </div>
+  <span class="caption caption--info">Portrait by Kris Desmedt</span>
   
   {{ partial "footer" .}}
 </body>
