--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,9 @@
 <script type="text/javascript" src="/scripts/modernizr.min.js"></script>
 <script type="text/javascript" src="/scripts/jquery.min.js"></script>
 <script type="text/javascript" src="/scripts/tingle.min.js"></script>
+<script type="text/javascript" src="/scripts/slick.min.js"></script>
+<script type="text/javascript" src="/scripts/bgs.js"></script>
 <script type="text/javascript" src="/scripts/main.js"></script>
-<script type="text/javascript" src="/scripts/preload.js"></script>
+<script type="text/javascript" src="/scripts/debug.js"></script>
+
 <!-- endbuild -->
