--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,14 +1,24 @@
-<div class="intro">
-  <div class="myar video">
-    <video autoplay loop muted>
-      <source src="/images/cut.mp4" type="video/mp4"/>
-    </video>
-  </div>
-  <div class="js-intro-hidden caption"></div>
-</div>
 
 <div class="animate-glitch js-info-open">
   <img class="btn--info" src="/images/info.svg" alt="Info"/>
   <img class="btn--info" src="/images/info-highlight.svg" alt="Info"/>
   <img class="btn--info" src="/images/info.svg" alt="Info"/>
 </div>
+
+<div class="intro-slick intro">
+  <div class="intro-slide">
+    <span class="caption">hologoram 3D video of MYAR t-shirt graphic. video by Nicola Buccioli.</span>
+
+    <div class="myar video">
+      <video autoplay loop muted playsinline>
+        <source src="/images/cut.mp4" type="video/mp4"/>
+        <source src="/images/cut.webm" type="video/webm"/>
+      </video>
+    </div>
+  </div>
+</div>
+
+<span class="caption js-bgs-caption"></span>
+
+<!--<div class="intro-text">WELCOME<br/>this site is temporarily under construction.<br/>Please click the images to browse through the showcase. <br/><br/>  ようこそ。<br/> ただいま、サイトのメンテナンス中です。<br/> 画像をクリックして、ギャラリーをお楽しみください。</div>-->
+<div class="intro-text"><img src="/images/welcome.svg" alt="Welcome" /></div>
