--- a/static/styles/_fonts.scss
+++ b/static/styles/_fonts.scss
@@ -5,3 +5,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+    font-family: 'Monaco';
+    src: url('../fonts/monaco-webfont.woff2') format('woff2'),
+         url('../fonts/monaco-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
