--- a/static/styles/_globals.scss
+++ b/static/styles/_globals.scss
@@ -1,3 +1,3 @@
 
 $font-family-heading: 'Choque Display', 'Arial Black', sans-serif;
-$font-family-body: monaco, serif;
+$font-family-body: 'Monaco', serif;
