--- a/static/styles/_intro.scss
+++ b/static/styles/_intro.scss
@@ -1,47 +1,60 @@
-
+.intro-slick,
 .intro {
   position: absolute;
   height: 100vh;
-  width: 100vw;  
+  width: 100vw;
   overflow: hidden;
   background-size: 100vw auto;
   transition: background 0.3s ease;
   cursor: pointer;
-
   .caption {
-    font-size: 11px;
-    display: block;
-    position: absolute;
-    bottom: 0;
-    margin: 3px 10px 5px 20px;
-    mix-blend-mode: difference;
-    user-select: none;
-  }
-
-  .myar {
     display: none;
   }
 }
 
-.no-backgroundblendmode {
-  .intro .caption {
-    margin: 0;
-    padding: 3px 10px 5px 20px;
-    
-    background-color: black;
-    background-color: rgba(0,0,0,0.5);
-  }
+.caption {
+  font-size: 11px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 3px 10px 5px 10px;
+  background-color: red;
+  background-color: rgba(255, 0, 0, 0.7);
+  user-select: none;
 }
 
+.caption--info {
+  display: none;
+  z-index: 1000;
+}
+
+.tingle-enabled .caption--info {
+  display: block;
+}
+
+.intro-slide {
+  height: 100vh !important;
+  background-size: 100vw auto;
+}
+
+// .no-backgroundblendmode {
+//   .caption {
+//     margin: 0;
+//     padding: 3px 10px 5px 10px;
+//     background-color: black;
+//     background-color: rgba(0,0,0,0.5);
+//   }
+// }
 .info-text {
   display: none;
 }
 
-.tingle-enabled .intro {
-  background-image: url('/images/contact_backdrop_md.png') !important;
-  background-size: 75vw auto !important;
-}
-
+// .tingle-enabled .intro {
+//   background-image: url('/images/contact_backdrop_md.png') !important;
+//   background-size: 75vw auto !important;
+// }
 .wrap {
   width: 100%;
   height: 100%;
@@ -57,60 +70,71 @@
   margin: 10px;
   height: 40px;
   width: 40px;
-  
   user-select: none;
-  cursor: pointer; 
+  cursor: pointer;
   z-index: 1001;
 }
 
-.loading {
+.intro-text {
+  font-family: $font-family-heading;
+  font-size: 18px;
+  // opacity: 0;
   position: absolute;
-  top: 20px;
-  right: 20px;
-  width: 100px;
-  height: 28px;
-  @include textGlitch('glitch', 10, white, black, red, blue, 57, 28, infinite, 0)
+  display: none;
+  // bottom: 30px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  // width: 130px;
+  // height: 28px;
+  width: 100%;
+  // mix-blend-mode: difference;
+  // @include textGlitch('glitch', 8, white, transparent, red, blue, 130, 28, infinite, 0)
+  text-align: center;
+  cursor: pointer;
+  img {
+    width: 500px;
+    @media (max-width: 767px) {
+      width: 320px;
+    }
+  }
 }
+
 
 /** 
   background customizations
 */
 
-.intro {
-
-  &.timcoppens {
-    background-size: 160vw auto; /* TODO: generate high res image */
-  }
-
-  &.bag {
-    background-size: 77vw auto;
-  }
-
-  &.deathby {
-    background-size: 80vw auto;
-  }
-
-  &.buggy-small {
-    background-image: url('../images/intro-crop-bg-v2.jpg');
-    background-size: 25vw auto;
-
-    @media (max-width: 900px) {
-      background-size: 33vw auto;  
-    }
-
-    @media (max-width: 500px) {
-      background-size: 50vw auto;
+.intro-slide {
+  background-repeat: no-repeat;
+  background-position: center;
+  &.vh {
+    background-size: auto 100vh;
+    @media (max-width: 767px) {
+      background-size: contain;
+      background-position: center;
+      background-color: white;
+      background-repeat: no-repeat;
     }
   }
+}
 
-  &.myar {
-    background-color: #000;
-    .myar {
-      display: block
-    }
-    video {
-      width: 100vw;
-      height: auto;
-    }
+.myar {
+  background-color: #000;
+  display: flex;
+  height: 100vh;
+
+  video {
+    width: 100vw;
+    height: auto;
+    max-height: 100%;
   }
+}
+
+.debug {
+  z-index: 1000;
+  position: fixed;
+  width: 400px;
+  left: 50%;
+  margin-left: -200px;
 }
