welcome screen, add debug option

--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -3,6 +3,7 @@
     <option value=""></option>
     <option value="cover">cover</option>
     <option value="contain">contain</option>
+    <option value="auto">normal</option>
   </select>
   <select class="js-slick-active-css-change" data-prop="background-position">
     <option value=""></option>
