--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -1,4 +1,5 @@
-<div class="debug">
+<a class="js-toggle-debug btn--debug">D</a>
+<div class="debug" style="display:none;">
   <select class="js-slick-active-css-change" data-prop="background-size">
     <option value=""></option>
     <option value="cover">cover</option>
