--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -7,13 +7,23 @@
 
 <div class="intro-slick intro">
   <div class="intro-slide">
-    <span class="caption">hologoram 3D video of MYAR t-shirt graphic. video by Nicola Buccioli.</span>
+    <span class="caption js-bgs-caption">hologoram 3D video of MYAR t-shirt graphic. video by Nicola Buccioli.</span>
 
     <div class="myar video">
       <video autoplay loop muted playsinline>
         <source src="/images/cut.mp4" type="video/mp4"/>
         <source src="/images/cut.webm" type="video/webm"/>
       </video>
+    </div>
+  </div>
+  <div class="intro-slide intro-slide--logos">
+    <div class="logos">
+      {{ partial "logos.html" .}}
+    </div>
+    <div class="go-down">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="#000000" height="24" viewBox="0 0 24 24" width="24">
+        <path xmlns="http://www.w3.org/2000/svg" d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+      </svg>
     </div>
   </div>
 </div>
