--- a/static/styles/_intro.scss
+++ b/static/styles/_intro.scss
@@ -19,7 +19,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 3px 10px 5px 10px;
+  padding: 5px 10px 5px 10px;
   background-color: red;
   background-color: rgba(255, 0, 0, 0.7);
   user-select: none;
@@ -137,4 +137,12 @@
   width: 400px;
   left: 50%;
   margin-left: -200px;
+}
+
+.btn--debug {
+  z-index: 1000;  
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: red;
 }
