--- a/static/styles/_modal.scss
+++ b/static/styles/_modal.scss
@@ -31,7 +31,7 @@
   cursor: pointer;
   transition: transform .2s ease, opacity 0.2s ease;
   
-  background-image: url('/images/final/PUNK_1800.jpg');
+  background-image: url('/images/PUNK_1800.jpg');
   background-size: cover;
   background-position: 50% 0;
 }
